--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 S3method(print,palette)
 export(create_color_dfs)
+export(custom_legend)
 export(default_hex)
+export(individual_legend)
 export(match_color_df)
 export(microshades_cvd_palettes)
 export(microshades_palette)
@@ -10,6 +12,7 @@ export(microshades_palettes)
 export(plot_microshades)
 export(prep_mdf)
 export(reorder_samples_by)
+import(cowplot)
 import(dplyr)
 import(forcats)
 import(ggplot2)
