Fixed transform sample counts import issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(create_color_dfs)
 export(custom_legend)
 export(default_hex)
 export(individual_legend)
-export(match_color_df)
+export(match_cdf)
 export(microshades_cvd_palettes)
 export(microshades_palette)
 export(microshades_palettes)
@@ -27,4 +27,3 @@ importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(speedyseq,psmelt)
 importFrom(speedyseq,tax_glom)
-importFrom(speedyseq,transform_sample_counts)
