--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-  phyloseq (>= 1.34.0),
+  phyloseq,
   speedyseq,
   dplyr (>= 1.0),
   tidyr (>= 1.1.2),
