--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,14 @@ Version: 0.0.0.9000
 Authors@R: 
     c(person("Erin","Dahl", role = c("aut", "cre"), email = "erind@pacificu.edu"),
       person("Lisa", "Karstens", role = "aut"),
-      person("Eric", "Leung", role = "aut"),
-      person("Emory", "Neer", role = "aut"), 
-      person("Kate", "Bowie", role = "aut"))
+      person("Emory", "Neer", role = "aut"),
+      person("Eric", "Leung", role = "ctb"),
+      person("Kate", "Bowie", role = "ctb"))
 Description: This package contains custom built color palettes that are availible for 
             plotting. This package can also be used to improve phyloseq abundance 
             plots with color abundance organization.
 License: MIT + file LICENSE
+URL: https://karstenslab.github.io/microshades
 Encoding: UTF-8
 LazyData: true
 Imports:
