--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,5 +6,7 @@ articles:
   microshades-GP: microshades-GP.html
   microshades-HMP: microshades-HMP.html
   microshades-HMP2: microshades-HMP2.html
-last_built: 2021-03-19T18:11Z
+  non-microbiome_data: non-microbiome_data.html
+  titanic_data_example: titanic_data_example.html
+last_built: 2021-03-31T19:16Z
 
