--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,palette)
 export(color_reassign)
 export(create_color_dfs)
 export(custom_legend)
+export(default_hex)
 export(match_cdf)
 export(microshades_cvd_palettes)
 export(microshades_palette)
