--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(color_reassign)
 export(create_color_dfs)
 export(custom_legend)
 export(default_hex)
+export(extend_group)
 export(match_cdf)
 export(microshades_cvd_palettes)
 export(microshades_palette)
 export(microshades_palettes)
+export(plot_contributions)
 export(plot_microshades)
 export(prep_mdf)
 export(reorder_samples_by)
