--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: microshades
 Title: A custom color palette for improving data visualization 
-Version: 1.10
+Version: 1.11
 Authors@R: 
-    c(person("Erin","Dahl", role = c("aut", "cre"), email = "erind@pacificu.edu"),
+    c(person("Erin","Dahl", role = c("aut"), email = "erind@pacificu.edu"),
       person("Emory", "Neer", role = "aut"),
-      person("Lisa", "Karstens", role = "aut"),
+      person("Lisa", "Karstens", role = "aut", "cre"),
       person("Eric", "Leung", role = "ctb"),
       person("Kate", "Bowie", role = "ctb"))
 Description: This package contains custom built color palettes that are availible for 
