--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.11
 Authors@R: 
     c(person("Erin","Dahl", role = "aut"),
       person("Emory", "Neer", role = "aut"),
-      person("Lisa", "Karstens", role = c("aut", "cre", email = "KarstensLab@gmail.com")),
+      person("Lisa", "Karstens", role = c("aut", "cre"), email = "KarstensLab@gmail.com"),
       person("Eric", "Leung", role = "ctb"),
       person("Kate", "Bowie", role = "ctb"))
 Description: This package contains custom built color palettes that are availible for 
