--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,11 +1,12 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.2
+pandoc: 3.1.6.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   microshades-GP: microshades-GP.html
   microshades-HMP: microshades-HMP.html
   microshades-HMP2: microshades-HMP2.html
   non-microbiome_data: non-microbiome_data.html
+  remove_na_option: remove_na_option.html
   titanic_data_example: titanic_data_example.html
-last_built: 2022-11-29T01:37Z
+last_built: 2023-08-25T20:39Z
 
