--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: microshades
 Title: A custom color palette for improving data visualization 
-Version: 1.12
+Version: 1.13
 Authors@R: 
     c(person("Erin","Dahl", role = "aut"),
       person("Emory", "Neer", role = "aut"),
       person("Lisa", "Karstens", role = c("aut", "cre"), email = "KarstensLab@gmail.com"),
       person("Eric", "Leung", role = "ctb"),
-      person("Kate", "Bowie", role = "ctb"))
+      person("Kate", "Bowie", role = "ctb"),
+      person("Anagha", "Shenoy", role = "ctb"))
 Description: This package contains custom built color palettes that are availible for 
             plotting. This package can also be used to improve phyloseq abundance 
             plots with color abundance organization.
